err/mock-server.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bcrypt'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/futures-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/markdown2-2.3.5.egg-info'...
Listing './lib/python3.5/site-packages/mock_server'...
Listing './lib/python3.5/site-packages/mock_server/example'...
Listing './lib/python3.5/site-packages/mock_server/example/RPC2'...
Listing './lib/python3.5/site-packages/mock_server/example/event'...
Listing './lib/python3.5/site-packages/mock_server/example/products'...
Listing './lib/python3.5/site-packages/mock_server/example/products/__id'...
Listing './lib/python3.5/site-packages/mock_server/example/user'...
Listing './lib/python3.5/site-packages/mock_server/example/user/__id'...
Listing './lib/python3.5/site-packages/mock_server/example/user/__id/family'...
Listing './lib/python3.5/site-packages/mock_server/example/user/__id/family/__name'...
Listing './lib/python3.5/site-packages/mock_server/example/user/john'...
Listing './lib/python3.5/site-packages/mock_server/example/user/kevin'...
Listing './lib/python3.5/site-packages/mock_server/example/user/tom'...
Compiling './lib/python3.5/site-packages/mock_server/fastrpcapi.py'...
***   File "./lib/python3.5/site-packages/mock_server/fastrpcapi.py", line 16
    except RuntimeError, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mock_server/jsonrpc.py'...
***   File "./lib/python3.5/site-packages/mock_server/jsonrpc.py", line 38
    print provider(api.Request(body='{"method": "user.list", "id": 1}'))
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mock_server/rest.py'...
***   File "./lib/python3.5/site-packages/mock_server/rest.py", line 179
    print resolve_request(provider, "post", "/ble")
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mock_server/static'...
Listing './lib/python3.5/site-packages/mock_server/static/css'...
Listing './lib/python3.5/site-packages/mock_server/static/img'...
Listing './lib/python3.5/site-packages/mock_server/static/js'...
Listing './lib/python3.5/site-packages/mock_server/static/vendor'...
Listing './lib/python3.5/site-packages/mock_server/static/vendor/ace'...
Listing './lib/python3.5/site-packages/mock_server/static/vendor/ace/js'...
Listing './lib/python3.5/site-packages/mock_server/static/vendor/bootstrap'...
Listing './lib/python3.5/site-packages/mock_server/static/vendor/bootstrap/css'...
Listing './lib/python3.5/site-packages/mock_server/static/vendor/bootstrap/img'...
Listing './lib/python3.5/site-packages/mock_server/static/vendor/bootstrap/js'...
Listing './lib/python3.5/site-packages/mock_server/static/vendor/jquery'...
Listing './lib/python3.5/site-packages/mock_server/static/vendor/jquery/js'...
Listing './lib/python3.5/site-packages/mock_server/static/vendor/pagedown'...
Listing './lib/python3.5/site-packages/mock_server/static/vendor/pagedown/css'...
Listing './lib/python3.5/site-packages/mock_server/static/vendor/pagedown/img'...
Listing './lib/python3.5/site-packages/mock_server/static/vendor/pagedown/js'...
Listing './lib/python3.5/site-packages/mock_server/static/vendor/prettify'...
Listing './lib/python3.5/site-packages/mock_server/static/vendor/prettify/css'...
Listing './lib/python3.5/site-packages/mock_server/static/vendor/prettify/js'...
Listing './lib/python3.5/site-packages/mock_server/templates'...
Listing './lib/python3.5/site-packages/mock_server/tests'...
Listing './lib/python3.5/site-packages/mock_server/tests/api'...
Listing './lib/python3.5/site-packages/mock_server/tests/api/RPC2'...
Listing './lib/python3.5/site-packages/mock_server/tests/api/hello'...
Listing './lib/python3.5/site-packages/mock_server/tests/api/user'...
Listing './lib/python3.5/site-packages/mock_server/tests/api/user/__id'...
Listing './lib/python3.5/site-packages/mock_server/tests/api/user/__id/family'...
Listing './lib/python3.5/site-packages/mock_server/tests/api/user/__id/family/__id'...
Listing './lib/python3.5/site-packages/mock_server/tests/api/user/tom'...
Compiling './lib/python3.5/site-packages/mock_server/xmlrpc.py'...
***   File "./lib/python3.5/site-packages/mock_server/xmlrpc.py", line 36
    print provider(api.Request(
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mock_server-0.3.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py_bcrypt-0.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
